<resources>
    <string name="app_name">WeatherApp</string>
    <string name="settings">Settings</string>
    <string name="city_zipcode">City ZipCode</string>
</resources>