...
            app:srcCompat="@drawable/weather_app_temperature_forecast_application_512"
            tools:ignore="ContentDescription"
            tools:src="@drawable/weather_app_temperature_forecast_application_512"
            tools:srcCompat="@drawable/weather_app_temperature_forecast_application_512" />

        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Few clouds"/>

...
